k8s/files/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: adrenlinerush-doc
  name: adrenlinerush-doc-service
  labels:
    app: adrenlinerush-doc
spec:
  type: ClusterIP
  selector:
    app: adrenlinerush-doc
  ports:
  - port: 80    
    targetPort: 3000  
    protocol: TCP
