k8s/files/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adrenlinerush-doc-ingress
  namespace: adrenlinerush-doc
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`doc.rancher.adrenlinerush.site`) || Host(`doc.adrenlinerush.net`) || Host(`doc.adrenlinerush.com`) || Host(`doc.adrenlinerush.us`)
      kind: Rule
      services:
        - name: adrenlinerush-doc-service
          port: 80
